{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 22,
  "lineage": "0d802b5d-87a5-b18b-5dac-fd9aa938d1d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030192b017b1d31e1",
            "arn": "arn:aws:ec2:us-east-1:423623848837:elastic-ip/eipalloc-030192b017b1d31e1",
            "domain": "vpc",
            "id": "eipalloc-030192b017b1d31e1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-1-180-108.compute-1.amazonaws.com",
            "public_ip": "52.1.180.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623848837:internet-gateway/igw-016da48195d67d766",
            "id": "igw-016da48195d67d766",
            "owner_id": "423623848837",
            "tags": {
              "Name": "my_gateway"
            },
            "tags_all": {
              "Name": "my_gateway"
            },
            "vpc_id": "vpc-0345e981eb9860fef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "pub-sub-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423623848837:loadbalancer/app/public-subnet-alb/8ed09d23c2cd1df0",
            "arn_suffix": "app/public-subnet-alb/8ed09d23c2cd1df0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-subnet-alb-2026202221.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623848837:loadbalancer/app/public-subnet-alb/8ed09d23c2cd1df0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-subnet-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e3ecc3481b4a4886"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09f09e7bad31b3c1a"
              },
              {
                "subnet_id": "subnet-0fd295a884318c264"
              }
            ],
            "subnets": [
              "subnet-09f09e7bad31b3c1a",
              "subnet-0fd295a884318c264"
            ],
            "vpc_id": "vpc-0345e981eb9860fef",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423623848837:listener/app/public-subnet-alb/8ed09d23c2cd1df0/c361863a32c58f28",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:423623848837:targetgroup/alb-ts/383c6f6302040635",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623848837:listener/app/public-subnet-alb/8ed09d23c2cd1df0/c361863a32c58f28",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:423623848837:loadbalancer/app/public-subnet-alb/8ed09d23c2cd1df0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.pub-sub-alb",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423623848837:targetgroup/alb-ts/383c6f6302040635",
            "arn_suffix": "targetgroup/alb-ts/383c6f6302040635",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 45,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623848837:targetgroup/alb-ts/383c6f6302040635",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-ts",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0345e981eb9860fef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Natgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030192b017b1d31e1",
            "association_id": "eipassoc-0e32e90d9bd492524",
            "connectivity_type": "public",
            "id": "nat-07a2560176810d301",
            "network_interface_id": "eni-090f844ecf5337a9a",
            "private_ip": "10.0.2.135",
            "public_ip": "52.1.180.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fd295a884318c264",
            "tags": {
              "Name": "gw NAT2"
            },
            "tags_all": {
              "Name": "gw NAT2"
            }
          },
          "dependencies": [
            "aws_eip.ngw-eip",
            "aws_internet_gateway.Igw",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prt_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623848837:route-table/rtb-04514c3159b1a5def",
            "id": "rtb-04514c3159b1a5def",
            "owner_id": "423623848837",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a2560176810d301",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prt_rt1"
            },
            "tags_all": {
              "Name": "prt_rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0345e981eb9860fef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw-eip",
            "aws_internet_gateway.Igw",
            "aws_nat_gateway.Natgw2",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623848837:route-table/rtb-0760fe6069a78751a",
            "id": "rtb-0760fe6069a78751a",
            "owner_id": "423623848837",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016da48195d67d766",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_rt"
            },
            "tags_all": {
              "Name": "pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0345e981eb9860fef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-sub1-rt-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068dbd362b9e4a722",
            "route_table_id": "rtb-04514c3159b1a5def",
            "subnet_id": "subnet-04d04693ae7a85663"
          },
          "dependencies": [
            "aws_eip.ngw-eip",
            "aws_internet_gateway.Igw",
            "aws_nat_gateway.Natgw2",
            "aws_route_table.prt_rt",
            "aws_subnet.privat1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-sub2-rt-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e1835dddd280306",
            "route_table_id": "rtb-04514c3159b1a5def",
            "subnet_id": "subnet-01fcc243fbacb5f65"
          },
          "dependencies": [
            "aws_eip.ngw-eip",
            "aws_internet_gateway.Igw",
            "aws_nat_gateway.Natgw2",
            "aws_route_table.prt_rt",
            "aws_subnet.privat2",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub1-rt-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016d42ba2ffd7c23f",
            "route_table_id": "rtb-0760fe6069a78751a",
            "subnet_id": "subnet-09f09e7bad31b3c1a"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.pub_rt",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub2-rt-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0900254c6bde1f699",
            "route_table_id": "rtb-0760fe6069a78751a",
            "subnet_id": "subnet-0fd295a884318c264"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.pub_rt",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623848837:security-group/sg-0e3ecc3481b4a4886",
            "description": "security_group for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3ecc3481b4a4886",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "423623848837",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0345e981eb9860fef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lt-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623848837:security-group/sg-08762cddd1a588eca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08762cddd1a588eca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e3ecc3481b4a4886"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e3ecc3481b4a4886"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lt-sg",
            "name_prefix": "",
            "owner_id": "423623848837",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0345e981eb9860fef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623848837:subnet/subnet-04d04693ae7a85663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d04693ae7a85663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623848837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0345e981eb9860fef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623848837:subnet/subnet-01fcc243fbacb5f65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fcc243fbacb5f65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623848837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0345e981eb9860fef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623848837:subnet/subnet-09f09e7bad31b3c1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f09e7bad31b3c1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423623848837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0345e981eb9860fef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623848837:subnet/subnet-0fd295a884318c264",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd295a884318c264",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623848837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0345e981eb9860fef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623848837:vpc/vpc-0345e981eb9860fef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d0a7233c86907293",
            "default_route_table_id": "rtb-0986806e5f5e61948",
            "default_security_group_id": "sg-023c6f931b5d1ed4a",
            "dhcp_options_id": "dopt-0e6c542ad781daf5f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0345e981eb9860fef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0986806e5f5e61948",
            "owner_id": "423623848837",
            "tags": {
              "Name": "aws-vpc"
            },
            "tags_all": {
              "Name": "aws-vpc"
            }
          }
        }
      ]
    }
  ]
}